--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>redirect page</title>
 </head>
 <frameset cols="*">
-<frame src="www.google.com">
+<frame src="http://www.google.com">
 </frameset>
 </html>
