--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>redirect page</title>
+   <!-- HTML meta refresh URL redirection -->
+   <meta http-equiv="refresh"
+   content="0; url=http://www.mydomain.com/new-page.html">
 </head>
-<frameset cols="*">
-<frame src="http://www.google.com">
-</frameset>
+<body>
+   <p>The page has moved to:
+   <a href="http://www.mydomain.com/new-page.html">this page</a></p>
+</body>
 </html>
