--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    content="0; url=http://www.mydomain.com/new-page.html">
 </head>
 <body>
-   <p>The page has moved to:
-   <a href="http://www.mydomain.com/new-page.html">this page</a></p>
+<frameset cols="*">
+<frame src="http://www.mydomain.com/new-page.html">
+</frameset>
 </body>
 </html>
