--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>test redirect page</title>
+</head>
    <!-- HTML meta refresh URL redirection -->
    <meta http-equiv="refresh"
-   content="0; url=http://www.mydomain.com/new-page.html">
 <frameset cols="*">
 <frame src="http://www.mydomain.com/new-page.html">
 </frameset>
-</head>
 </html>
