--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-<title>test redirect page</title>
+    <title>Title</title>
 </head>
-   <!-- HTML meta refresh URL redirection -->
-   <meta http-equiv="refresh"
-<frameset cols="*">
-<frame src="http://www.mydomain.com/new-page.html">
-</frameset>
+
+<style>
+body {
+    margin: 0;
+    padding: 0;
+}
+body, iframe { 
+    width: 100%;
+    height: 100%;
+}
+iframe {
+    border: 0;
+}
+</style>
+
+<body>
+    <iframe src="http://www.example.com"/>
+</body>
+
 </html>
