--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
-<html>
+<html><head><title>Title of your webpage</title></head>
+<frameset cols="*">
+ <frame name="main" src="http://www.site-helper.com" scrolling="auto" noresize>
+ <noframes>
+ <body>
 
-<head>
-    <title>Title</title>
-</head>
+ Your browser does not support frames
 
-<style>
-body {
-    margin: 0;
-    padding: 0;
-}
-body, iframe { 
-    width: 100%;
-    height: 100%;
-}
-iframe {
-    border: 0;
-}
-</style>
-
-<body>
-    <iframe src="http://www.example.com"/>
-</body>
-
+ </body>
+ </noframes>
+</frameset>
 </html>
