--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<html><head><title>Title of your webpage</title></head>
-<frameset cols="*">
- <frame name="main" src="http://www.site-helper.com" scrolling="auto" noresize>
- <noframes>
- <body>
-
- Your browser does not support frames
-
- </body>
- </noframes>
+<!-- HTML frame redirection -->
+<html>
+<head>
+    <title>Title of new page</title>
+</head>
+<frameset cols="100%">
+    <frame src="http://www.mydomain.com/new-page.html">
+    <noframes>
+     <a href="http://www.mydomain.com/new-page.html">Link to new page</a>
+    </noframes>
 </frameset>
 </html>
